--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Courier New', Courier, monospace;
     box-sizing: border-box;
 }
 
@@ -45,7 +44,8 @@ button{
 }
 
 p {
-    line-height: 1.5;
+    line-height: 1.7;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 b {
