--- a/css/icons.css
+++ b/css/icons.css
@@ -1,5 +1,14 @@
-.magnifier-glass {
+
+.icon {
     color:#ccc;
     font-size:1.5rem;
     aspect-ratio:1;
+}
+
+.icon:hover{
+    color:#aaa;
+}
+
+.icon.close{
+    font-size:1.25rem;
 }
