--- a/css/normalize.css
+++ b/css/normalize.css
@@ -46,6 +46,8 @@ button{
 p {
     line-height: 1.7;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:#555;
+    letter-spacing: 1px;
 }
 
 b {
@@ -57,3 +59,8 @@ b {
     display:flex;
     justify-content: space-between;    
 }
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; }
